# libvsmbr

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libvsmbr-wiki.ini  libvsmbr.ini  libvsmbr.pc.in  libvsmbr.spec.in  pyproject.toml.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.github/workflows/: build_macos.yml  build_ossfuzz.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h  narrow_string.h  wide_string.h
documentation/: Master Boot Record (MBR) partition table format.asciidoc  Master Boot Record (MBR) partition table.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libvsmbr.h.in
include/libvsmbr/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libvsmbr/: Makefile.am  libvsmbr.c  libvsmbr.rc.in  libvsmbr_boot_record.c  libvsmbr_boot_record.h  libvsmbr_chs_address.c  libvsmbr_chs_address.h  libvsmbr_debug.c  libvsmbr_debug.h  libvsmbr_definitions.h.in  libvsmbr_error.c  libvsmbr_error.h  libvsmbr_extern.h  libvsmbr_handle.c  libvsmbr_handle.h  libvsmbr_io_handle.c  libvsmbr_io_handle.h  libvsmbr_libbfio.h  libvsmbr_libcdata.h  libvsmbr_libcerror.h  libvsmbr_libclocale.h  libvsmbr_libcnotify.h  libvsmbr_libcthreads.h  libvsmbr_libfcache.h  libvsmbr_libfdata.h  libvsmbr_notify.c  libvsmbr_notify.h  libvsmbr_partition.c  libvsmbr_partition.h  libvsmbr_partition_entry.c  libvsmbr_partition_entry.h  libvsmbr_partition_type.c  libvsmbr_partition_type.h  libvsmbr_partition_values.c  libvsmbr_partition_values.h  libvsmbr_section_values.c  libvsmbr_section_values.h  libvsmbr_sector_data.c  libvsmbr_sector_data.h  libvsmbr_support.c  (+10 more)
m4/: yaltools.m4
manuals/: Makefile.am  libvsmbr.3  vsmbrinfo.1
msvscpp/: Makefile.am  libvsmbr.sln
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/libvsmbr/: libvsmbr.vcproj
msvscpp/pyvsmbr/: pyvsmbr.vcproj
msvscpp/vsmbr_test_boot_record/: vsmbr_test_boot_record.vcproj
msvscpp/vsmbr_test_chs_address/: vsmbr_test_chs_address.vcproj
msvscpp/vsmbr_test_error/: vsmbr_test_error.vcproj
msvscpp/vsmbr_test_get_version/: vsmbr_test_get_version.vcproj
msvscpp/vsmbr_test_handle/: vsmbr_test_handle.vcproj
msvscpp/vsmbr_test_io_handle/: vsmbr_test_io_handle.vcproj
msvscpp/vsmbr_test_notify/: vsmbr_test_notify.vcproj
msvscpp/vsmbr_test_partition/: vsmbr_test_partition.vcproj
msvscpp/vsmbr_test_partition_entry/: vsmbr_test_partition_entry.vcproj
msvscpp/vsmbr_test_partition_type/: vsmbr_test_partition_type.vcproj
msvscpp/vsmbr_test_partition_values/: vsmbr_test_partition_values.vcproj
msvscpp/vsmbr_test_section_values/: vsmbr_test_section_values.vcproj
msvscpp/vsmbr_test_sector_data/: vsmbr_test_sector_data.vcproj
msvscpp/vsmbr_test_support/: vsmbr_test_support.vcproj
msvscpp/vsmbr_test_tools_info_handle/: vsmbr_test_tools_info_handle.vcproj
msvscpp/vsmbr_test_tools_output/: vsmbr_test_tools_output.vcproj
msvscpp/vsmbr_test_tools_signal/: vsmbr_test_tools_signal.vcproj
msvscpp/vsmbr_test_volume/: vsmbr_test_volume.vcproj
msvscpp/vsmbr_test_volume_type/: vsmbr_test_volume_type.vcproj
msvscpp/vsmbrinfo/: vsmbrinfo.vcproj
ossfuzz/: Makefile.am  ossfuzz_libvsmbr.h  partition_fuzzer.cc  volume_fuzzer.cc
pyvsmbr/: Makefile.am  pyvsmbr.c  pyvsmbr.h  pyvsmbr_error.c  pyvsmbr_error.h  pyvsmbr_file_object_io_handle.c  pyvsmbr_file_object_io_handle.h  pyvsmbr_handle.c  pyvsmbr_handle.h  pyvsmbr_integer.c  pyvsmbr_integer.h  pyvsmbr_libbfio.h  pyvsmbr_libcerror.h  pyvsmbr_libclocale.h  pyvsmbr_libvsmbr.h  pyvsmbr_partition.c  pyvsmbr_partition.h  pyvsmbr_partitions.c  pyvsmbr_partitions.h  pyvsmbr_python.h  pyvsmbr_unused.h  pyvsmbr_volume.c  pyvsmbr_volume.h
pyvsmbr-python2/: Makefile.am
pyvsmbr-python3/: Makefile.am
tests/: Makefile.am  atlocal.in  pkgbuild.sh  pyvsmbr_test_handle.py  pyvsmbr_test_partition.py  pyvsmbr_test_support.py  pyvsmbr_test_volume.py  runtests.py  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_python_module.at  test_python_module.sh  test_tools.at  test_tools.ps1  test_tools.sh  test_vsmbrinfo.ps1  test_vsmbrinfo.sh  vsmbr_test_boot_record.c  vsmbr_test_chs_address.c  vsmbr_test_error.c  vsmbr_test_extern.h  vsmbr_test_functions.c  vsmbr_test_functions.h  vsmbr_test_get_version.c  vsmbr_test_getopt.c  vsmbr_test_getopt.h  vsmbr_test_handle.c  vsmbr_test_io_handle.c  vsmbr_test_libbfio.h  vsmbr_test_libcerror.h  vsmbr_test_libclocale.h  vsmbr_test_libcnotify.h  vsmbr_test_libcstring.h  vsmbr_test_libcsystem.h  (+21 more)
tests/data/: boot_record.1  partition_entry.1
vsmbrtools/: Makefile.am  info_handle.c  info_handle.h  vsmbrinfo.c  vsmbroutput.c  vsmbroutput.h  vsmbrtools_getopt.c  vsmbrtools_getopt.h  vsmbrtools_i18n.h  vsmbrtools_libbfio.h  vsmbrtools_libcerror.h  vsmbrtools_libclocale.h  vsmbrtools_libcnotify.h  vsmbrtools_libcstring.h  vsmbrtools_libcsystem.h  vsmbrtools_libuna.h  vsmbrtools_libvsmbr.h  vsmbrtools_output.c  vsmbrtools_output.h  vsmbrtools_signal.c  vsmbrtools_signal.h  vsmbrtools_unused.h
