include_HEADERS = \
	libvsmbr.h

pkginclude_HEADERS = \
	libvsmbr/codepage.h \
	libvsmbr/definitions.h \
	libvsmbr/error.h \
	libvsmbr/extern.h \
	libvsmbr/features.h \
	libvsmbr/types.h

EXTRA_DIST = \
	libvsmbr.h.in \
	libvsmbr/definitions.h.in \
	libvsmbr/features.h.in \
	libvsmbr/types.h.in

DISTCLEANFILES = \
	libvsmbr.h \
	libvsmbr/definitions.h \
	libvsmbr/features.h \
	libvsmbr/types.h \
	Makefile \
	Makefile.in

