MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libuna/libuna.vcproj \
	libvsmbr/libvsmbr.vcproj \
	pyvsmbr/pyvsmbr.vcproj \
	vsmbr_test_error/vsmbr_test_error.vcproj \
	vsmbr_test_support/vsmbr_test_support.vcproj \
	vsmbrinfo/vsmbrinfo.vcproj \
	libvsmbr.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

