MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libuna/libuna.vcproj \
	libvsmbr/libvsmbr.vcproj \
	pyvsmbr/pyvsmbr.vcproj \
	vsmbr_test_boot_record/vsmbr_test_boot_record.vcproj \
	vsmbr_test_chs_address/vsmbr_test_chs_address.vcproj \
	vsmbr_test_error/vsmbr_test_error.vcproj \
	vsmbr_test_io_handle/vsmbr_test_io_handle.vcproj \
	vsmbr_test_notify/vsmbr_test_notify.vcproj \
	vsmbr_test_partition/vsmbr_test_partition.vcproj \
	vsmbr_test_partition_entry/vsmbr_test_partition_entry.vcproj \
	vsmbr_test_partition_type/vsmbr_test_partition_type.vcproj \
	vsmbr_test_partition_values/vsmbr_test_partition_values.vcproj \
	vsmbr_test_section_values/vsmbr_test_section_values.vcproj \
	vsmbr_test_sector_data/vsmbr_test_sector_data.vcproj \
	vsmbr_test_support/vsmbr_test_support.vcproj \
	vsmbr_test_tools_info_handle/vsmbr_test_tools_info_handle.vcproj \
	vsmbr_test_tools_output/vsmbr_test_tools_output.vcproj \
	vsmbr_test_tools_signal/vsmbr_test_tools_signal.vcproj \
	vsmbr_test_volume/vsmbr_test_volume.vcproj \
	vsmbrinfo/vsmbrinfo.vcproj \
	libvsmbr.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

